--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Relatório das redes sociais</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha Escola</a>
+        </nav>
+    </header>
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
+            <!--crie os graficos aqui-->
+        </section>
+    </main>
+    <footer>
+        <p> Desenvolvido por julia Capella Cantao</p>
+    </footer>
 </body>
 </html>
